feat(simulated annealing): Judment and Mutation Updating code