@@ -14,6 +14,7 @@ import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,7 +26,7 @@ class JudgementTest {
     void setUp() {
         Event event = new Event(
                 new ArrayList<>(List.of(1)),
-                new ArrayList<>(Arrays.asList(new Athlete(
+                new ArrayList<>(List.of(new Athlete(
                         1,
                         "ÖSK",
                         "Alexander",
@@ -118,14 +119,42 @@ class JudgementTest {
     void getTimeSlot() {
         Judgement.getConflicts(eventList);
 
+        /*
+                int conflicts = 0;
+                //System.out.println("This is size: "+ eventList.size());
+                for (int First_Value_To_Iterate_List = 0; First_Value_To_Iterate_List < eventList.size(); First_Value_To_Iterate_List++) {
+                    for (int Second_value_To_Iterate_List = 0; Second_value_To_Iterate_List < eventList.size(); Second_value_To_Iterate_List++) {
+                        for (int k = 0; k < eventList.get(First_Value_To_Iterate_List).time_slots().size(); k++)
+                            for (int l = 0; l < eventList.get(Second_value_To_Iterate_List).time_slots().size(); l++)
+                                if (Objects.equals(eventList.get(First_Value_To_Iterate_List).time_slots().get(k), eventList.get(Second_value_To_Iterate_List).time_slots().get(l)))
+                                    for (int o = 0; o < eventList.get(First_Value_To_Iterate_List).athletes().size(); o++) {
+                                        for (int p = 0; p < eventList.get(Second_value_To_Iterate_List).athletes().size(); p++) {
+                                            if (eventList.get(First_Value_To_Iterate_List) != eventList.get(Second_value_To_Iterate_List)) {
+                                                if ((eventList.get(First_Value_To_Iterate_List).athletes().get(o).id()) == eventList.get(Second_value_To_Iterate_List).athletes().get(p).id())
+                                                {
+                                                    //System.out.println("This is First_Value_To_Iterate_List: " + First_Value_To_Iterate_List);
+                                                    //int first_athlete = eventList.get(First_Value_To_Iterate_List).athletes().get(o).id();
+                                                    //int second_athlete = eventList.get(Second_value_To_Iterate_List).athletes().get(p).id();
+                                                    //System.out.println("first athlete: " + first_athlete + " and second athlete: " + second_athlete);
+                                                    conflicts++;
+                                                    //System.out.println("This is conflicts: " + conflicts);
+                                                }
+                                            }
+                                        }
+                                    }
+                    }
+                }
+                //System.out.println("This is conflicts: " + conflicts);
+                //double double_conflicts = conflicts;
+                //double_conflicts = Math.sqrt(double_conflicts);
+                //conflicts = (int) double_conflicts;
+                return conflicts;
+            }
+        }
+
+         */
 
 
 
     }
-
-
-
-
-
-
 }
